# bike-power-model-lib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  FORMAT_SPEC.md  README.md  RELEASING.md
samples/fit/: README.md
scripts/: strip_coauthored_by.py  wheel_smoke.py
src/bike_power_model/: __init__.py  cli.py
tests/: test_offline.py  test_placeholder.py
