[project]
name = "bike-power-model"
dynamic = ["version"]
description = "Cycling physics engine: power/speed solver, race-time prediction, and Garmin Power Guide FIT generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sam Dumont" }]
keywords = [
    "cycling",
    "power",
    "physics",
    "pacing",
    "race-prediction",
    "garmin",
    "fit",
    "power-guide",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

# Core runtime dependencies. This pre-release ships only the CLI shell; the
# physics solver, FIT tooling, and their dependencies land with the engine.
# Optional feature groups (elevation, road-surface, analysis) are added
# alongside the engine as extras so a plain install stays lean.
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-socket>=0.7",
    "ruff>=0.9",
]

[project.scripts]
bpm = "bike_power_model.cli:cli"

[project.urls]
Homepage = "https://github.com/sam-dumont/bike-power-model-lib"
Repository = "https://github.com/sam-dumont/bike-power-model-lib"
Changelog = "https://github.com/sam-dumont/bike-power-model-lib/blob/main/CHANGELOG.md"
Issues = "https://github.com/sam-dumont/bike-power-model-lib/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the git tag by hatch-vcs. A tag `v0.0.1a0` builds
# `0.0.1a0`; an untagged commit builds a PEP 440 dev version.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Drop the local `+g<hash>` segment so version strings stay PyPI-compatible.
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/bike_power_model/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bike_power_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
# _version.py is generated by hatch-vcs at build time; it is an artefact,
# not source, so it is excluded from both lint and format.
extend-exclude = ["src/bike_power_model/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
